testsuite/tests/properties/invalid_and_or/int_bool.lkt
import common

class Example: FooNode implements TokenNode {
    @ignored fun f(i: Int, e: Equation): Bool = i and e
}
